--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,35 +1,21 @@
+server:
+  port: ${SPRING_PORT:8080}
+
 spring:
   application:
-    name: 9diMeak
-
-  # Database Configuration
+    name: 9dimeak
   data:
     mongodb:
-      uri: mongodb://localhost:27017/9diMeak_db
-      auto-index-creation: true
+      uri: ${SPRING_DATA_MONGODB_URI}
+  mvc:
+    servlet:
+      path: /api
 
-  # Jackson (JSON) Configuration
-  jackson:
-    default-property-inclusion: non_null # Don't send null fields in JSON responses
+springdoc:
+  swagger-ui:
+    path: /swagger.html
 
-# Server Configuration
-server:
-  port: 8080
-  error:
-    include-message: always
-
-# Security Configuration
-application:
-  security:
-    jwt:
-      secret-key: {SECRET_KEY}
-      expiration: 86400000 # in milliseconds
-      issuer: 9diMeak-management-api
-
-# Logging
 logging:
   level:
-    org.springframework.web: INFO
-    org.springframework.security: INFO
-    org.springframework.data.mongodb: INFO
-    com.logistics.system: DEBUG
+    root: INFO
+    org.springframework.web: DEBUG
