--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,46 @@
 server:
   port: ${SPRING_PORT:8080}
+  servlet:
+    context-path: ${SERVER_SERVLET_CONTEXT_PATH:/api}
 
 spring:
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE}
   application:
     name: 9dimeak
   data:
     mongodb:
       uri: ${SPRING_DATA_MONGODB_URI}
-  mvc:
-    servlet:
-      path: /api
+      auto-index-creation: true
+      uuid-representation: standard
 
 springdoc:
   swagger-ui:
-    path: /swagger.html
+    path: /swagger-ui.html
+    operations-sorter: method
+    api-docs:
+      path: /v3/api-docs
+
+app:
+  jwt:
+    secret-key: ${JWT_SECRET_KEY}
+    expiration-ms: ${JWT_EXPIRATION_MS:1200000}
+    issuer: ${JWT_ISSUER_NAME:9dimeakApp}
+    refresh:
+      secret-key: ${JWT_REFRESH_SECRET_KEY}
+      expiration-ms: ${JWT_REFRESH_EXPIRATION_MS:604800000}
+      cookie-name: ${JWT_REFRESH_COOKIE_NAME:refresh_token}
+  security:
+    role-prefix: ${SECURITY_ROLE_PREFIX:ROLE_}
+    bcrypt-strength: ${SECURITY_BCRYPT_STRENGTH:10}
+  admin:
+    init-login: ${ADMIN_INIT_LOGIN}
+    init-password: ${ADMIN_INIT_PASSWORD}
 
 logging:
   level:
     root: INFO
+    com.PCM._diMeak: DEBUG
     org.springframework.web: DEBUG
+    org.springframework.security: DEBUG
+    org.springframework.data.mongodb: DEBUG
